--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -1,18 +1,15 @@
 set -g status on
 set -g status-interval 1
-set -g status-justify centre # Careful! It is spelled centre not center.
+set -g status-justify centre
 set -g status-style fg=white,bg=black
 
-# Highlight the current window.
 setw -g window-status-current-style fg=white,bg=red,bright
 setw -g mouse on
 
-# Status Bar Left side
 set -g status-left-length 50
 set -g status-left-style default
 set -g status-left "#h #( ~/.tmux/left_status.sh )"
 
-# Status Bar Right side
 set -g status-right-length 40
 set -g status-right-style default
 set -g status-right "#( ~/.tmux/right_status.sh )"
